# library_api

./: Dockerfile  README.md  docker-compose.yml  library.db  pyproject.toml  requirements.txt  test_data.sql  tz.md
src/: main.py
src/models/: book.py  database.py
src/routes/: books.py  stats.py
src/services/: book_service.py  search_service.py
src/utils/: config.py  exceptions.py
