[tool.poetry]
name = "library_api"
version = "0.1.0"
description = "RESTful API for library catalog management"
authors = ["Your Name <your.email@example.com>"]

[tool.poetry.dependencies]
python = "^3.10"
aiohttp = "^3.8"
aiosqlite = "^0.18.0"
pydantic = "^2.0"
python-dotenv = "^0.21.0"
aiohttp-swagger = "^1.0.16"

[tool.poetry.dev-dependencies]
pytest = "^7.2.0"
pytest-asyncio = "^0.20.3"
pytest-cov = "^4.0.0"
black = "^22.12.0"
isort = "^5.11.4"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"